--- a/configs/dev.yml
+++ b/configs/dev.yml
@@ -6,10 +6,5 @@ db:
 server:
   port: 8000
   host: "0.0.0.0"
-auth:
-  exp: 72000 # hours
-  secret: secret-key
-task:
-  itemLimit: 10
-job: 
-  systemSummaryPeriod: 1800 # seconds
+notification:
+  approveOnSend: false
